adding reference examples